# pinval

./: .gitignore  .pre-commit-config.yaml  DESCRIPTION  Generalized pin-val comparison.qmd  README.md  pin-val_comparison.qmd  pinval.qmd  test.qmd
.github/workflows/: generate-pinval.yaml  generate-pinval.yml  pre-commit.yaml
hugo/: config.toml
hugo/content/: error.md
hugo/content/2025/: 99999999999999.md
hugo/layouts/: ineligible.html  missing.html  report.html  single.html
hugo/layouts/_default/: report.html
hugo/layouts/_partials/banner/: banner.html
hugo/layouts/_partials/body/: back-to-search.html
hugo/layouts/_partials/head/: boilerplate.html  css-link-bootstrap.html  favicons.html  styles.html
hugo/static/static/css/: datatables@2.3.2.min.css
hugo/static/static/js/: datatables@2.3.2.min.js
pinval/: config.toml
pinval/content/: test-multi-card.md  test-single-card.md  test.md
pinval/layouts/page/: report.html
reports/pin-comparison/: pin-val_comparison.qmd  pin_comparison.qmd
scripts/generate_pinval/: constants.py  dev_generate_pinval.py  generate_pinval.py  list_townships.py  pyproject.toml  resolve_model_metadata.py
